Deprecated constructor replaced